@@ -1,0 +1,23 @@
+#This script was automatically generated by zeda-config-gen in ZEDA.
+#2021年 5月 8日 土曜日 08:17:07 JST by zhidao
+#!/bin/sh
+case $1 in
+-I)
+  echo -I/home/zhidao/usr/include -I/usr/include/libxml2
+  ;;
+-L)
+  echo -L/home/zhidao/usr/lib
+  ;;
+-D)
+  echo -D__ZEDA_USE_LIBXML
+  ;;
+-l)
+  echo -lliw -lzeda -lm -lxml2 -ldl -lpthread -lrt
+  ;;
+-v)
+  echo 1.2.2
+  ;;
+*)
+  ;;
+esac
+exit 0
