@@ -1,3 +1,4 @@
+2021. 5. 7. Made tools/, and modified makefiles. [zm, app, tools]
 2021. 4.29. Modified app/makefile. [app]
 2021. 4.29. Reflected new specification of zeda-config-gen. [app]
 2021. 3.31. Modified makefile to separately make and install library and applications. [makefile]
